--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar bg-body-tertiary">
-  <div class="container-fluid">
-    <img src="assets/logos/logocatas.png" alt="Bootstrap" width="125" height="50">
-    <span class="navbar-brand mb-0 h1">Organismo de Formalizacion de la Propiedad Informal</span>
+<nav class="navbar bg-body-tertiary bg-white h-16">
+  <div class="flex flex-auto items-center">
+    <img src="assets/logos/logocatas.png" class="h-16 w-auto">
+    <span class="text-lg font-semibold">Organismo de Formalizacion de la Propiedad Informal</span>
   </div>
 </nav>
