--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,29 @@
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css'); /* You can add global styles to this file, and also import other style files */
+@tailwind base;
 @tailwind utilities;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	list-style: none;
+	text-decoration: none;
+	border: none;
+	outline: none;
+}
+html {
+	scroll-behavior: inherit;
+	font-size: 16px;
+}
+html,
+body {
+	background-color: #f1f5f9;
+	// position: relative;
+	letter-spacing: normal;
+	//font-family: Roboto, 'Helvetica Neue', sans-serif;
+	//font-family: 'Inter var', sans-serif;
+	font-family: 'Inter var', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+		sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', Segoe UI Symbol, 'Noto Color Emoji';
+	font-feature-settings: 'salt' !important;
+	-webkit-font-feature-settings: 'salt' !important;
+	-moz-font-feature-settings: 'salt' !important;
+}
