--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -3,6 +3,6 @@
   <div id="map"></div>
   <app-fab-container-top></app-fab-container-top>
   <app-fab-container-botton></app-fab-container-botton>
-  <app-menu-portal></app-menu-portal>
+  <!-- <app-menu-portal></app-menu-portal> -->
 
 </div>
