--- a/src/app/mapa/pages/portal/components/fab-container-botton/fab-container-botton.component.scss
+++ b/src/app/mapa/pages/portal/components/fab-container-botton/fab-container-botton.component.scss
@@ -1,76 +1,15 @@
-$primary: #24c1ac;
-.fab-container {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
-	user-select: none;
+.btn-tool:hover:before {
+	content: '';
 	position: absolute;
-	bottom: 30px;
-	right: 30px;
-	&:hover {
-		height: 100%;
-		.sub-button:nth-child(2) {
-			transform: translateY(-80px);
-		}
-		.sub-button:nth-child(3) {
-			transform: translateY(-140px);
-		}
-		.sub-button:nth-child(4) {
-			transform: translateY(-200px);
-		}
-		.sub-button:nth-child(5) {
-			transform: translateY(-260px);
-		}
-		.sub-button:nth-child(6) {
-			transform: translateY(-320px);
-		}
-		.sub-button:nth-child(7) {
-			transform: translateY(-380px);
-		}
-		.sub-button:nth-child(8) {
-			transform: translateY(-440px);
-		}
-	}
-	.fab {
-		position: relative;
-		height: 48px;
-		width: 48px;
-		background-color: $primary;
-		border-radius: 50%;
-		z-index: 2;
-
-		.fab-content {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			height: 100%;
-			width: 100%;
-			border-radius: 50%;
-			.material-icons {
-				color: white;
-				font-size: 48px;
-			}
-		}
-	}
-	.sub-button {
-		position: absolute;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		bottom: 0;
-		right: 0;
-		height: 48px;
-		width: 48px;
-		background-color: $primary;
-		border-radius: 50%;
-		transition: all 0.3s ease;
-		&:hover {
-			cursor: pointer;
-		}
-		.material-icons {
-			color: white;
-			padding-top: 6px;
-		}
-	}
+	left: 50%;
+	top: 50%;
+	width: 54px;
+	height: 54px;
+	margin: -27px 0 0 -27px;
+	border-radius: 50%;
+	border: 2px solid transparent;
+	border-top-color: #eb9913;
+	animation: spin 2s linear infinite;
+	-webkit-animation: spin 2s linear infinite;
+	z-index: -1 !important;
 }
