--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -1,8 +1,9 @@
 <app-navbar></app-navbar>
 <div class="block  w-full h-full">
-  <div id="map"></div>
-  <app-fab-container-top></app-fab-container-top>
-  <app-fab-container-botton></app-fab-container-botton>
-  <!-- <app-menu-portal></app-menu-portal> -->
+	<div id="map"></div>
+	<app-fab-container-top></app-fab-container-top>
+	<app-fab-container-botton></app-fab-container-botton>
+	<!-- <app-menu-portal></app-menu-portal> -->
 
 </div>
+<div (click)="this._portalService.mapabase('Callejero')">gg</div>
