--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -4,6 +4,10 @@
 	<app-fab-container-top></app-fab-container-top>
 	<app-fab-container-botton></app-fab-container-botton>
 	<button mat-raised-button class='' color='primary' (click)='gg()'>gg</button>
+	<button mat-raised-button class='' color='primary' (click)='gg3()'>gg3</button>
+	<button mat-raised-button class='' color='primary' (click)='gg4(null)'>gg4</button>
+	<button mat-raised-button class='' color='primary' (click)='gg5()'>gg5</button>
+	<button mat-raised-button class='' color='primary' (click)='gg6()'>gg6</button>
 	<!-- <app-menu-portal></app-menu-portal> -->
 
 </div>
