--- a/src/app/mapa/pages/portal/components/fab-container-top/fab-container-top.component.scss
+++ b/src/app/mapa/pages/portal/components/fab-container-top/fab-container-top.component.scss
@@ -11,5 +11,54 @@
 	border-top-color: #eb9913;
 	animation: spin 2s linear infinite;
 	-webkit-animation: spin 2s linear infinite;
-	z-index: -1 !important;
+	z-index: 1 !important;
+}
+.satelite {
+	background: url('/assets/img/esrisatellite.webp') 0 0 / 200px 133px;
+}
+.osm {
+	background: url('/assets/img/osmmapnik.webp') 0 0 / 200px 133px;
+}
+.topo {
+	background: url('/assets/img/esriroad.webp') 0 0 / 200px 133px;
+}
+#animated-div-base {
+	width: 48px;
+	height: 48px;
+	background-size: cover;
+	border-radius: 50%;
+	box-shadow: rgb(0 0 0 / 17%) 0px -11px 13px 0px inset, rgb(0 0 0 / 15%) 0px -18px 15px 0px inset,
+		rgb(0 0 0 / 10%) 0px -17px 10px 0px inset, rgb(0 0 0 / 6%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 2px 1px,
+		rgb(0 0 0 / 9%) 0px 4px 2px, rgb(0 0 0 / 9%) 0px 4px 2px;
+	animation: animacionBase 25s linear 0s infinite;
+	-webkit-animation: animacionBase 25s linear 0s infinite;
+}
+@keyframes animacionBase {
+	0% {
+		background-position: 0 0;
+	}
+	100% {
+		background-position: 200px 0; /* Cambia -90px a la altura de tu imagen para crear el efecto de desplazamiento vertical */
+	}
+}
+#animated-div {
+	width: 48px;
+	height: 48px;
+	background: url('/assets/img/bg-map-icon.webp') 0 0 / 167px 62px;
+	background-size: cover;
+	border-radius: 50%;
+	box-shadow: rgb(0 0 0 / 17%) 0px -11px 13px 0px inset, rgb(0 0 0 / 15%) 0px -18px 15px 0px inset,
+		rgb(0 0 0 / 10%) 0px -17px 10px 0px inset, rgb(0 0 0 / 6%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 2px 1px, rgb(0 0 0 / 9%) 0px 2px 1px,
+		rgb(0 0 0 / 9%) 0px 4px 2px, rgb(0 0 0 / 9%) 0px 4px 2px;
+	animation: animacion 25s linear 0s infinite;
+	-webkit-animation: animacion 25s linear 0s infinite;
+}
+
+@keyframes animacion {
+	0% {
+		background-position: 0 0;
+	}
+	100% {
+		background-position: 167px 0;
+	}
 }
