--- a/src/app/mapa/pages/portal/components/menu-portal/menu-portal.component.html
+++ b/src/app/mapa/pages/portal/components/menu-portal/menu-portal.component.html
@@ -1,4 +1,4 @@
-<aside class="fixed top-14 left-0 w-64 h-full" aria-label="Sidenav">
+<!-- <aside class="    w-full h-full" aria-label="Sidenav">
 	<div class="overflow-y-auto py-5 px-3 h-full bg-white border-r border-gray-200  ">
 		<ul class="space-y-2">
 			<li>
@@ -168,114 +168,32 @@
 			</li>
 		</ul>
 	</div>
-	<div class="hidden absolute bottom-0 left-0 justify-center p-4 space-x-4 w-full lg:flex bg-white   z-20">
-		<a href="#" class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer d  hover:text-gray-900   hover:bg-gray-100  ">
-			<svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-				<path
-					d="M5 4a1 1 0 00-2 0v7.268a2 2 0 000 3.464V16a1 1 0 102 0v-1.268a2 2 0 000-3.464V4zM11 4a1 1 0 10-2 0v1.268a2 2 0 000 3.464V16a1 1 0 102 0V8.732a2 2 0 000-3.464V4zM16 3a1 1 0 011 1v7.268a2 2 0 010 3.464V16a1 1 0 11-2 0v-1.268a2 2 0 010-3.464V4a1 1 0 011-1z">
-				</path>
-			</svg>
-		</a>
-		<a href="#" data-tooltip-target="tooltip-settings"
-			class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer d    hover:text-gray-900 hover:bg-gray-100  ">
-			<svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-				<path fill-rule="evenodd"
-					d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
-					clip-rule="evenodd"></path>
-			</svg>
-		</a>
-		<div id="tooltip-settings" role="tooltip"
-			class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip">
-			Settings page
-			<div class="tooltip-arrow" data-popper-arrow></div>
-		</div>
-		<button type="button" data-dropdown-toggle="language-dropdown"
-			class="inline-flex justify-center p-2 text-gray-500 rounded cursor-pointer   d  hover:text-gray-900 hover:bg-gray-100  ">
-			<svg aria-hidden="true" class="h-5 w-5 rounded-full mt-0.5" xmlns="http://www.w3.org/2000/svg"
-				xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 3900 3900">
-				<path fill="#b22234" d="M0 0h7410v3900H0z" />
-				<path d="M0 450h7410m0 600H0m0 600h7410m0 600H0m0 600h7410m0 600H0" stroke="#fff" stroke-width="300" />
-				<path fill="#3c3b6e" d="M0 0h2964v2100H0z" />
-				<g fill="#fff">
-					<g id="d">
-						<g id="c">
-							<g id="e">
-								<g id="b">
-									<path id="a" d="M247 90l70.534 217.082-184.66-134.164h228.253L176.466 307.082z" />
-									<use xlink:href="#a" y="420" />
-									<use xlink:href="#a" y="840" />
-									<use xlink:href="#a" y="1260" />
-								</g>
-								<use xlink:href="#a" y="1680" />
-							</g>
-							<use xlink:href="#b" x="247" y="210" />
-						</g>
-						<use xlink:href="#c" x="494" />
-					</g>
-					<use xlink:href="#d" x="988" />
-					<use xlink:href="#c" x="1976" />
-					<use xlink:href="#e" x="2470" />
-				</g>
-			</svg>
-		</button>
-		<!-- Dropdown -->
-		<div class="hidden z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow  " id="language-dropdown">
-			<ul class="py-1" role="none">
-				<li>
-					<a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100      " role="menuitem">
-						<div class="inline-flex items-center">
 
-							English (US)
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100      " role="menuitem">
-						<div class="inline-flex items-center">
-							<svg aria-hidden="true" class="h-3.5 w-3.5 rounded-full mr-2" xmlns="http://www.w3.org/2000/svg" id="flag-icon-css-de"
-								viewBox="0 0 512 512">
-								<path fill="#ffce00" d="M0 341.3h512V512H0z" />
-								<path d="M0 0h512v170.7H0z" />
-								<path fill="#d00" d="M0 170.7h512v170.6H0z" />
-							</svg>
-							Deutsch
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100      " role="menuitem">
-						<div class="inline-flex items-center">
-							<svg aria-hidden="true" class="h-3.5 w-3.5 rounded-full mr-2" xmlns="http://www.w3.org/2000/svg" id="flag-icon-css-it"
-								viewBox="0 0 512 512">
-								<g fill-rule="evenodd" stroke-width="1pt">
-									<path fill="#fff" d="M0 0h512v512H0z" />
-									<path fill="#009246" d="M0 0h170.7v512H0z" />
-									<path fill="#ce2b37" d="M341.3 0H512v512H341.3z" />
-								</g>
-							</svg>
-							Italiano
-						</div>
-					</a>
-				</li>
-				<li>
-					<a href="#" class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100      " role="menuitem">
-						<div class="inline-flex items-center">
-							<svg aria-hidden="true" class="h-3.5 w-3.5 rounded-full mr-2" xmlns="http://www.w3.org/2000/svg"
-								xmlns:xlink="http://www.w3.org/1999/xlink" id="flag-icon-css-cn" viewBox="0 0 512 512">
-								<defs>
-									<path id="a" fill="#ffde00" d="M1-.3L-.7.8 0-1 .6.8-1-.3z" />
-								</defs>
-								<path fill="#de2910" d="M0 0h512v512H0z" />
-								<use width="30" height="20" transform="matrix(76.8 0 0 76.8 128 128)" xlink:href="#a" />
-								<use width="30" height="20" transform="rotate(-121 142.6 -47) scale(25.5827)" xlink:href="#a" />
-								<use width="30" height="20" transform="rotate(-98.1 198 -82) scale(25.6)" xlink:href="#a" />
-								<use width="30" height="20" transform="rotate(-74 272.4 -114) scale(25.6137)" xlink:href="#a" />
-								<use width="30" height="20" transform="matrix(16 -19.968 19.968 16 256 230.4)" xlink:href="#a" />
-							</svg>
-						</div>
-					</a>
-				</li>
-			</ul>
+</aside> -->
+
+<div class="transition-opacity duration-300 h-full   bg-purple-500">
+
+	<div class="flex flex-row flex-nowrap h-full">
+		<div class="min-w-[80px]  bg-white flex flex-col items-center gap-2 py-2 shadow-xl z-10  cursor-pointer">
+			<div (click)="_portalService.menu = !_portalService.menu" class="w-14 h-14 cursor-pointer">
+				<img src="/assets/img/logo.jpg" alt="">
+			</div>
+			<div (click)="closetMenu('capas'); subMenu ='capas' "
+				class="w-14 h-14  relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
+				[ngClass]="{'active-left-panel': subMenu == 'capas'}" id="left-panel">
+				Capas disponibles</div>
+			<div (click)="closetMenu('proyectos');subMenu ='proyectos' "
+				class="w-14 h-14  relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
+				[ngClass]="{'active-left-panel': subMenu == 'proyectos'}" id="left-panel">
+				Proyectos</div>
+			<div></div>
 		</div>
+		<div *ngIf="subMenu =='capas'" class="w-full bg-red-500 transition-opacity duration-500 shadow-xl z-[5]"
+			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">capas
+		</div>
+		<div *ngIf="subMenu =='proyectos'" class="w-full bg-red-500 transition-all duration-500 shadow-xl z-[5]"
+			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">proyectos
+		</div>
+
 	</div>
-</aside>
+</div>
