--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -4,6 +4,9 @@
 <button mat-raised-button class='' color='primary' (click)='gg4(null)'>gg4</button>
 <button mat-raised-button class='' color='primary' (click)='gg5()'>gg5</button>
 <button mat-raised-button class='' color='primary' (click)='gg6()'>gg6</button> -->
+<button mat-raised-button class='' color='primary' (click)='gg7()'>gg7</button>
+<button mat-raised-button class='' color='primary' (click)='gg8()'>gg8</button>
+
 <div class="flex flex-row flex-nowrap">
 	<div class="z-10  block  transition-all duration-300  " [style.height]="height "
 		[style.width]="_portalService.menu ? 'calc(380px - (100vw - 100%))' : 'calc(80px)' ">
