--- a/src/app/mapa/pages/portal/components/menu-portal/menu-portal.component.html
+++ b/src/app/mapa/pages/portal/components/menu-portal/menu-portal.component.html
@@ -1,199 +1,101 @@
-<!-- <aside class="    w-full h-full" aria-label="Sidenav">
-	<div class="overflow-y-auto py-5 px-3 h-full bg-white border-r border-gray-200  ">
-		<ul class="space-y-2">
-			<li>
-				<a href="#" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg   hover:bg-gray-100 ">
-					<svg aria-hidden="true" class="w-6 h-6 text-gray-400 transition duration-75   group-hover:text-gray-900  " fill="currentColor"
-						viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"></path>
-						<path d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"></path>
-					</svg>
-					<span class="ml-3">Overview</span>
-				</a>
-			</li>
-			<li>
-				<button type="button"
-					class="flex items-center p-2 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100  "
-					aria-controls="dropdown-pages" data-collapse-toggle="dropdown-pages">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-gray-900    "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M4 4a2 2 0 012-2h4.586A2 2 0 0112 2.586L15.414 6A2 2 0 0116 7.414V16a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 6a1 1 0 011-1h6a1 1 0 110 2H7a1 1 0 01-1-1zm1 3a1 1 0 100 2h6a1 1 0 100-2H7z"
-							clip-rule="evenodd"></path>
-					</svg>
-					<span class="flex-1 ml-3 text-left whitespace-nowrap">Pages</span>
-					<svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-							clip-rule="evenodd"></path>
-					</svg>
-				</button>
-				<ul id="dropdown-pages" class="hidden py-2 space-y-2">
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Settings</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Kanban</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Calendar</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<button type="button"
-					class="flex items-center p-2 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    "
-					aria-controls="dropdown-sales" data-collapse-toggle="dropdown-sales">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-gray-900 d   "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z"
-							clip-rule="evenodd"></path>
-					</svg>
-					<span class="flex-1 ml-3 text-left whitespace-nowrap">Sales</span>
-					<svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-							clip-rule="evenodd"></path>
-					</svg>
-				</button>
-				<ul id="dropdown-sales" class="hidden py-2 space-y-2">
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Products</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Billing</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Invoice</a>
-					</li>
-				</ul>
-			</li>
-			<li>
-				<a href="#" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg   hover:bg-gray-100   group">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 d  group-hover:text-gray-900  "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M8.707 7.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l2-2a1 1 0 00-1.414-1.414L11 7.586V3a1 1 0 10-2 0v4.586l-.293-.293z">
-						</path>
-						<path d="M3 5a2 2 0 012-2h1a1 1 0 010 2H5v7h2l1 2h4l1-2h2V5h-1a1 1 0 110-2h1a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V5z">
-						</path>
-					</svg>
-					<span class="flex-1 ml-3 whitespace-nowrap">Messages</span>
-					<span
-						class="inline-flex justify-center items-center w-5 h-5 text-xs font-semibold rounded-full text-primary-800 bg-primary-100    ">
-						6
-					</span>
-				</a>
-			</li>
-			<li>
-				<button type="button"
-					class="flex items-center p-2 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    "
-					aria-controls="dropdown-authentication" data-collapse-toggle="dropdown-authentication">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 group-hover:text-gray-900 d   "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
-							clip-rule="evenodd"></path>
-					</svg>
-					<span class="flex-1 ml-3 text-left whitespace-nowrap">Authentication</span>
-					<svg aria-hidden="true" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z"
-							clip-rule="evenodd"></path>
-					</svg>
-				</button>
-				<ul id="dropdown-authentication" class="hidden py-2 space-y-2">
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Sign
-							In</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Sign
-							Up</a>
-					</li>
-					<li>
-						<a href="#"
-							class="flex items-center p-2 pl-11 w-full text-base font-normal text-gray-900 rounded-lg transition duration-75 group hover:bg-gray-100    ">Forgot
-							Password</a>
-					</li>
-				</ul>
-			</li>
-		</ul>
-		<ul class="pt-5 mt-5 space-y-2 border-t border-gray-200  ">
-			<li>
-				<a href="#"
-					class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg transition duration-75 hover:bg-gray-100     group">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 d  group-hover:text-gray-900  "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"></path>
-						<path fill-rule="evenodd"
-							d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z"
-							clip-rule="evenodd"></path>
-					</svg>
-					<span class="ml-3">Docs</span>
-				</a>
-			</li>
-			<li>
-				<a href="#"
-					class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg transition duration-75 hover:bg-gray-100     group">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 d  group-hover:text-gray-900  "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path
-							d="M7 3a1 1 0 000 2h6a1 1 0 100-2H7zM4 7a1 1 0 011-1h10a1 1 0 110 2H5a1 1 0 01-1-1zM2 11a2 2 0 012-2h12a2 2 0 012 2v4a2 2 0 01-2 2H4a2 2 0 01-2-2v-4z">
-						</path>
-					</svg>
-					<span class="ml-3">Components</span>
-				</a>
-			</li>
-			<li>
-				<a href="#"
-					class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg transition duration-75 hover:bg-gray-100     group">
-					<svg aria-hidden="true" class="flex-shrink-0 w-6 h-6 text-gray-400 transition duration-75 d  group-hover:text-gray-900  "
-						fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-						<path fill-rule="evenodd"
-							d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-2 0c0 .993-.241 1.929-.668 2.754l-1.524-1.525a3.997 3.997 0 00.078-2.183l1.562-1.562C15.802 8.249 16 9.1 16 10zm-5.165 3.913l1.58 1.58A5.98 5.98 0 0110 16a5.976 5.976 0 01-2.516-.552l1.562-1.562a4.006 4.006 0 001.789.027zm-4.677-2.796a4.002 4.002 0 01-.041-2.08l-.08.08-1.53-1.533A5.98 5.98 0 004 10c0 .954.223 1.856.619 2.657l1.54-1.54zm1.088-6.45A5.974 5.974 0 0110 4c.954 0 1.856.223 2.657.619l-1.54 1.54a4.002 4.002 0 00-2.346.033L7.246 4.668zM12 10a2 2 0 11-4 0 2 2 0 014 0z"
-							clip-rule="evenodd"></path>
-					</svg>
-					<span class="ml-3">Help</span>
-				</a>
-			</li>
-		</ul>
-	</div>
-
-</aside> -->
-
-<div class="transition-opacity duration-300 h-full   bg-purple-500">
-
+<div class="transition-opacity duration-300 h-full bg-white">
 	<div class="flex flex-row flex-nowrap h-full">
-		<div class="min-w-[80px]  bg-white flex flex-col items-center gap-2 py-2 shadow-xl z-10  cursor-pointer">
-			<div (click)="_portalService.menu = !_portalService.menu" class="w-14 h-14 cursor-pointer">
+		<!-- *Menu Principal -->
+		<div class="min-w-[80px] bg-white flex flex-col items-center gap-2 py-2 shadow-xl z-10 cursor-pointer">
+			<div (click)="toogleMenu()" class="w-14 h-14 cursor-pointer">
 				<img src="/assets/img/logo.jpg" alt="">
 			</div>
 			<div (click)="closetMenu('capas'); subMenu ='capas' "
-				class="w-14 h-14  relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
+				class="w-14 h-14 relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
 				[ngClass]="{'active-left-panel': subMenu == 'capas'}" id="left-panel">
-				Capas disponibles</div>
+				<mat-icon class="material-icons-round text-gray-400 flex items-center justify-center"
+					[ngClass]="{'text-red-500': subMenu == 'capas'}">
+					layers
+				</mat-icon>
+			</div>
 			<div (click)="closetMenu('proyectos');subMenu ='proyectos' "
-				class="w-14 h-14  relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
+				class="w-14 h-14 relative rounded-full border border-solid border-[#e0e0e0] flex justify-center items-center cursor-pointer"
 				[ngClass]="{'active-left-panel': subMenu == 'proyectos'}" id="left-panel">
-				Proyectos</div>
+				<mat-icon class="material-icons-round text-gray-400 flex items-center justify-center"
+					[ngClass]="{'text-red-500': subMenu == 'proyectos'}">
+					grid_view
+				</mat-icon>
+			</div>
 			<div></div>
 		</div>
-		<div *ngIf="subMenu =='capas'" class="w-full bg-red-500 transition-opacity duration-500 shadow-xl z-[5]"
-			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">capas
+		<!-- *Menu Secundario -->
+		<!-- #capas -->
+		<div *ngIf="subMenu =='capas'"
+			class="w-full bg-white transition-all duration-500 shadow-xl z-[5] overflow-y-auto flex flex-col items-center  "
+			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">
+			<div class="bg-red-500 w-full h-9 flex flex-row justify-between items-center p-2">
+				<div class="p-2 text-white">Capas Disponibles</div>
+				<mat-icon class="material-icons-round text-white cursor-pointer" (click)="toogleMenu()">
+					close
+				</mat-icon>
+			</div>
+			<div *ngFor="let capas of _portalService.Layers.Temas; let capaIndex = index"
+				class=" flex flex-col justify-center items-center w-full">
+				<div
+					class="flex flex-row h-14 w-full bg-white items-center justify-between p-2 cursor-pointer border-0 border-solid border-gray-400/20 border-b"
+					(click)="capas.isOpen = !capas.isOpen">
+					<div>{{capas.nombre}}</div>
+					<div>
+						<mat-icon class="material-icons-round">
+							{{capas.isOpen ? 'expand_more':'expand_less' }}
+						</mat-icon>
+					</div>
+				</div>
+				<ng-container *ngIf="capas.isOpen">
+					<div class="w-full" *ngFor="let Grupos of capas.Grupos; let GruposIndex = index">
+						<div
+							class="flex flex-row   px-2 bg-blue-500/5 items-center justify-between text-sm cursor-pointer border-0 border-solid border-gray-400/20 border-b"
+							(click)="Grupos.isOpen = !Grupos.isOpen">
+							<div>{{Grupos.nombre}}</div>
+							<div>
+								<mat-icon class="material-icons-round text-md flex items-center justify-center">
+									{{Grupos.isOpen ? 'visibility':'visibility_off' }}
+								</mat-icon>
+							</div>
+						</div>
+						<ng-container *ngIf="Grupos.isOpen">
+							<div *ngFor="let Layers of Grupos.Layers  let LayersIndex = index">
+								<div class=" px-2 py-1 hover:bg-blue-500/25  flex flex-row justify-between">
+									<div class="flex flex-row">
+										<mat-icon class="material-icons-round text-base flex items-center justify-center   ">
+											layers
+										</mat-icon>
+										{{Layers.nombre}}
+									</div>
+									<div class="flex flex-row">
+										<mat-slide-toggle class="example-margin" [color]="color" [checked]="Layers.activa" [disabled]="disabled"
+											(click)="_portalService.addLayerExtra(capaIndex.toString(),GruposIndex.toString(),Layers.ide.toString(),Layers) ">
+										</mat-slide-toggle>
+										<mat-icon class="material-icons-round text-base flex items-center justify-center cursor-pointer hover:text-red-500  ">
+											settings
+										</mat-icon>
+									</div>
+								</div>
+							</div>
+						</ng-container>
+					</div>
+				</ng-container>
+			</div>
 		</div>
-		<div *ngIf="subMenu =='proyectos'" class="w-full bg-red-500 transition-all duration-500 shadow-xl z-[5]"
-			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">proyectos
+		<!-- #proyectos -->
+		<div *ngIf="subMenu =='proyectos'"
+			class="w-full bg-white transition-all duration-500 shadow-xl z-[5] overflow-y-auto flex flex-col items-center gap-2 "
+			[style.opacity]="_portalService.menu ? '1' : '0'" [style.display]="_portalService.menu ? 'block' : 'none'">
+			<div class="bg-red-500 w-full h-9 flex flex-row justify-between items-center p-2">
+				<div class="p-2 text-white">Proyecto</div>
+				<mat-icon class="material-icons-round text-white cursor-pointer" (click)="toogleMenu()">
+					close
+				</mat-icon>
+			</div>
+			<div *ngFor="let proyecto of _proyectosService.proyectos" class=" flex justify-center items-center "
+				(click)="_portalService.Activo(proyecto.idDist)">
+				<img class="object-contain w-auto h-32" src="/assets/logos/{{proyecto.img}}" alt="" loading="lazy">
+			</div>
 		</div>
-
 	</div>
 </div>
