--- a/src/app/mapa/pages/portal/components/fab-container-top/fab-container-top.component.html
+++ b/src/app/mapa/pages/portal/components/fab-container-top/fab-container-top.component.html
@@ -4,7 +4,7 @@
 			class="btn-tool cursor-pointer flex justify-center items-center w-full h-full">
 			<span></span>
 		</div>
-		<div *ngIf="mapaBaseView" class="absolute flex flex-row top-0 right-16 gap-4 ">
+		<div *ngIf="!mapaBaseView" class="absolute flex flex-row top-0 right-16 gap-4 ">
 			<div (click)="_portalService.mapabase('Satélite')"
 				class="relative cursor-pointer flex justify-center items-center w-12 h-12 bg-black rounded-full">
 				<div id="animated-div-base" class="satelite btn-tool flex justify-center items-center w-full h-full">
@@ -25,22 +25,29 @@
 			</div>
 		</div>
 	</div>
-	<div
-		class="btn-tool cursor-pointer relative w-12 h-12 rounded-full bg-[#eb990f] hover:bg-white hover:text-[#eb990f] transition duration-300 ease-in-out">
-		<div class="flex justify-center items-center w-full h-full">
-			<span>2</span>
+
+	<div *ngFor="let data of data" class="relative cursor-pointer flex justify-center items-center w-12  h-12 ">
+		<div (click)="data.childrenView=!data.childrenView;data?.f()"
+			class="btn-tool flex justify-center items-center w-full  h-full text-white bg-[#eb990f] hover:bg-white  hover:text-[#eb9913]  transition duration-700 ease-in-out  rounded-full"
+			[ngClass]="{'btn-tool-activate' :data.childrenView  }">
+			<mat-icon class="material-icons-round ">{{data.icon}}</mat-icon>
+			<mat-icon *ngIf="data.descripcion !==''"
+				class="z-[5] material-icons-round hover:animate-ping     bottom-0 left-7 absolute  w-3.5 h-3.5 hover:bg-white bg-[#eb990f]   text-white  hover:text-[#eb9913]  border-2     rounded-full flex justify-center items-center"
+				#tooltip="matTooltip" matTooltip="{{data.descripcion}}" [matTooltipPosition]="'above'">info</mat-icon>
+		</div>
+		<div *ngIf="data.childrenView" class="absolute flex flex-row top-0 right-16 gap-4 ">
+			<div *ngFor="let children of data.children" (click)="children?.f()"
+				class="relative cursor-pointer flex justify-center items-center w-12  h-12 ">
+				<div
+					class="btn-tool flex justify-center items-center w-full  h-full text-[#eb9913]  bg-white hover:bg-[#eb9913]   hover:text-white  transition duration-700 ease-in-out  rounded-full"
+					[ngClass]="{'btn-tool-activate' :data.childrenView  }">
+					<mat-icon class="material-icons-round ">{{children.icon}}</mat-icon>
+					<mat-icon *ngIf="children.descripcion !==''"
+						class="z-[5] material-icons-round hover:animate-ping     bottom-0 left-7 absolute  w-3.5 h-3.5 hover:bg-white bg-[#eb990f]   text-white  hover:text-[#eb9913]  border-2     rounded-full flex justify-center items-center"
+						#tooltip="matTooltip" matTooltip="{{children.descripcion}}" [matTooltipPosition]="'above'">info</mat-icon>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div
-		class="btn-tool cursor-pointer relative w-12 h-12 rounded-full bg-[#eb990f] hover:bg-white hover:text-[#eb990f]  transition duration-300 ease-in-out">
-		<div class="flex justify-center items-center w-full h-full">
-			<span>3</span>
-		</div>
-	</div>
-	<div
-		class="btn-tool cursor-pointer relative w-12 h-12 rounded-full bg-[#1bc5bd] hover:text-[#eb990f]  transition duration-300 ease-in-out">
-		<div class="flex justify-center items-center w-full h-full">
-			<span>4</span>
-		</div>
-	</div>
+
 </div>
