--- a/src/app/mapa/pages/portal/portal.component.html
+++ b/src/app/mapa/pages/portal/portal.component.html
@@ -15,7 +15,7 @@
 		<app-menu-portal></app-menu-portal>
 	</div>
 	<div class="  ">
-		<div class=" absolute block    transition-all duration-300   " [style.height]="height "
+		<div class="   block    transition-all duration-300   " [style.height]="height "
 			[style.width]="_portalService.menu ? 'calc(100vw - 380px)' : 'calc((100vw - 80px) - (100vw - 100%))' ">
 
 
