--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar bg-body-tertiary bg-white h-16">
-	<div class="flex flex-auto items-center">
-		<img src="assets/logos/logocatas.png" class="h-16 w-auto">
-		<span class="text-lg font-semibold">Organismo de Formalizacion de la Propiedad Informal</span>
+<nav class="block relative z-30      degra   bg-gradient-to-t from-black/50 to-blue-500/0  m-auto">
+	<div class="flex  items-center p-4 gap-2">
+		<img src="assets/logos/logocatas-trans.png" class="h-10 w-auto bg-white rounded-md">
+		<span class="text-xl text-white  ">Organismo de Formalizacion de la Propiedad Informal</span>
 	</div>
 </nav>
