--- a/src/app/mapa/pages/portal/dialog/contactanos/contactanos.component.html
+++ b/src/app/mapa/pages/portal/dialog/contactanos/contactanos.component.html
@@ -1,1 +1,23 @@
-<p>contactanos works!</p>
+<div class="flex flex-col gap-2 p-4 w-full items-center justify-center">
+
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Nombre y apellidos:</mat-label>
+		<input type="text" placeholder="Nombre y apellidos" matInput>
+	</mat-form-field>
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Correo electrónico:</mat-label>
+		<input type="text" placeholder="Correo electrónico" matInput>
+	</mat-form-field>
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Asunto</mat-label>
+		<input type="text" placeholder="Asunto" matInput>
+	</mat-form-field>
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Mensaje:</mat-label>
+		<textarea type="text" placeholder="Mensaje" matInput></textarea>
+	</mat-form-field>
+</div>
+<div class="flex flex-col gap-2 p-4 pt-0 w-full items-center justify-center">
+
+	<button mat-raised-button class='bg-red-500 text-white px-4 py-2 ' color='primary'>Enviar Mensaje</button>
+</div>
