--- a/src/app/mapa/pages/portal/components/fab-container-botton/fab-container-botton.component.html
+++ b/src/app/mapa/pages/portal/components/fab-container-botton/fab-container-botton.component.html
@@ -15,7 +15,7 @@
 						class="z-10 material-icons-round hover:animate-ping     bottom-0 left-7 absolute  w-3.5 h-3.5 hover:bg-white bg-[#1bc5bd]   text-white  hover:text-[#1bc5bd]  border-2     rounded-full flex justify-center items-center"
 						#tooltip="matTooltip" matTooltip="{{data.descripcion}}" [matTooltipPosition]="'above'">info</mat-icon>
 				</div>
-				<div *ngIf="data.childrenView" class="absolute flex flex-row top-0 right-16 gap-4 ">
+				<div *ngIf="data.childrenView" class="absolute flex flex-row-reverse top-0 right-16 gap-4 ">
 					<div *ngFor="let children of data.children" (click)="children?.f()"
 						class="relative cursor-pointer flex justify-center items-center w-12  h-12 ">
 						<div
