--- a/src/app/mapa/pages/portal/dialog/plotear-puntos/plotear-puntos.component.html
+++ b/src/app/mapa/pages/portal/dialog/plotear-puntos/plotear-puntos.component.html
@@ -1,1 +1,24 @@
-<p>plotear-puntos works!</p>
+<div class="flex flex-col gap-2 p-4 w-full items-center justify-center">
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Sistema</mat-label>
+		<mat-select [formControl]="sistemasControl">
+			<mat-option *ngFor="let sistema of sistemas" [value]="sistema.value">
+				{{sistema.name}}
+			</mat-option>
+		</mat-select>
+	</mat-form-field>
+
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Latitud</mat-label>
+		<input type="number" matInput placeholder="Latitud" [formControl]="latitudControl">
+	</mat-form-field>
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Longitud</mat-label>
+		<input type="number" matInput placeholder="Longitud" [formControl]="longitudControl">
+	</mat-form-field>
+	<mat-form-field appearance="outline" subscriptSizing="dynamic">
+		<mat-label>Descripción</mat-label>
+		<textarea type="text" matInput placeholder="Longitud" [formControl]="descripcionControl"></textarea>
+	</mat-form-field>
+	<button mat-raised-button class='py-[6px] px-[9px] bg-red-500 text-white rounded-md ' color='' (click)='generarPunto()'>Plotear</button>
+</div>
