--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css'); /* You can add global styles to this file, and also import other style files */
 @tailwind base;
 @tailwind utilities;
+:root {
+	--mdc-shape-small: 13px;
+	--mdc-outlined-text-field-container-shape: 13px !important;
+	--mdc-shape-medium: 13px;
+	--mdc-checkbox-state-layer-size: 30px;
+	--radius: 12px;
+}
 * {
 	margin: 0;
 	padding: 0;
@@ -26,4 +33,7 @@ body {
 	font-feature-settings: 'salt' !important;
 	-webkit-font-feature-settings: 'salt' !important;
 	-moz-font-feature-settings: 'salt' !important;
+}
+.leaflet-draw-toolbar {
+	display: none;
 }
